.metadata/.plugins/org.eclipse.cdt.ui/lab4.build.log
09:46:54 **** Incremental Build of configuration Debug for project lab4 ****
make all 
Building file: ../src/lab4.cpp
Invoking: GCC C++ Compiler
g++ -std=c++2a -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/lab4.d" -MT"src/lab4.o" -o "src/lab4.o" "../src/lab4.cpp"
../src/lab4.cpp:11:10: error: invalid use of non-static data member 'n'
        int ptr[n][n]; // для целой матрицы
                ^
../src/lab4.cpp:11:13: error: invalid use of non-static data member 'n'
        int ptr[n][n]; // для целой матрицы
                   ^
../src/lab4.cpp:66:7: warning: unused variable 'first_size' [-Wunused-variable]
                int first_size = n;
                    ^
../src/lab4.cpp:67:7: warning: unused variable 'sexond_size' [-Wunused-variable]
                int sexond_size = obj.n;
                    ^
../src/lab4.cpp:87:6: warning: unused variable 'number' [-Wunused-variable]
        int number;
            ^
../src/lab4.cpp:11:6: warning: private field 'ptr' is not used [-Wunused-private-field]
        int ptr[n][n]; // для целой матрицы
            ^
4 warnings and 2 errors generated.
make: *** [src/lab4.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

09:46:54 Build Failed. 3 errors, 4 warnings. (took 336ms)

